c4prj2_input/grade.txt
Grading at Sat Aug  3 00:15:15 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:51:1: error: expected expression before ‘/’ token
 /  deck_t* tmp = hand_from_string(hand, fc); // 
 ^
input.c:53:19: error: ‘tmp’ undeclared (first use in this function)
   input[n_hand] = tmp; 
                   ^
input.c:53:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation of input.c failed

Overall Grade: F
